src/test/resources/Parser/SyntaxErrors/TwiceDefinedLocalVariable.front
class A:
    test(i: [A]) {
        i: int32 = 0;
    }